add config, db, and utils

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,7 @@
 0000=Success
+0001=Insufficient params
+0010=Faculty is not found
+0011=Faculty is already registered
+0020=Department is not found
+0021=Department is already registered
 9999=Unexpected error
