--- a/src/main/resources/messages_in_ID.properties
+++ b/src/main/resources/messages_in_ID.properties
@@ -1,2 +1,7 @@
 0000=Berhasil
+0001=Parameter tidak lengkap
+0010=Fakultas tidak ditemukan
+0011=Fakultas sudah terdaftar
+0020=Departemen tidak ditemukan
+0021=Departemen sudah terdaftar
 9999=Ada kesalahan dalam sistem
